--- a/FRONTEND/src/App.css
+++ b/FRONTEND/src/App.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap');
+
+@theme{
+    --color-primary: #2563EB;
+    --color-secondary: #FBBF24;
+}
+
+* {
+    font-family: Montserrat, sans-serif;
+}
+
+
+.font-poiret {
+    font-family: Poiret One !important;
+}
